# Homework

./: README.md
mypkg/: CMakeLists.txt  package.xml
mypkg/scripts/: .twice.py.swo  .twice.py.swp  count.py  twice.py
