<?xml version="1.0"?>
<package>
  <name>mypkg</name>
  <version>1.0.0</version>
  <description>Morse code practice</description>

  <maintainer email="s1426053gu@s.chibakoudai.jp">YusakuZama RyuichiUeda</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
    
  </export>
</package>
